java8.spoofax3/test/statics/java/classes/nested/innernotsubtype.no.spt.bak
module classes/nested/innernotsubtype_no

language metaborg-java

test innernotsubtype [[

test;



// error: incompatible types\: C\.D cannot be converted to A\.B

[A]
class A {
    class B {}
}

[C]
class C extends A {
    class D {}
}

[Test]
class Test {
    A.B m() {
        return new C().new D();
    }
}

]] analysis fails
   run javacFails to ""
